Font size on mobile has been slightly increased to prevent zooming in on input focus

--- a/src/about/About.css
+++ b/src/about/About.css
@@ -18,10 +18,14 @@
 
 .AboutBody {
     width: 85%;
-
 }
 
 .RandomButton {
     width: 15em;
-    flex-grow: 0;
 }
+
+@media screen and (max-width: 990px) {
+    .AboutBody {
+        font-size: 1em;
+    }
+  }
